Fix some examples in the user-manual, allow <pre> lines to wrap, s/13.1/8.0/
Thanks to Claire ROBINE for noticing an error in the "ps" example.

--- a/doc/stylesheets/website.css
+++ b/doc/stylesheets/website.css
@@ -1,5 +1,3 @@
-/* TODO: pre can wrap */
-
 * {
     padding: 0;
     margin: 0;
@@ -139,6 +137,8 @@ pre {
     color: black;
 
     font-family: monospace;
+
+    white-space: pre-wrap;
 }
 
 tt {
